chore: test error handling of new action

--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
+    "owner": "bycedric",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
