--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -14,10 +14,10 @@ jobs:
         with:
           node-version: 14.x
       - name: Set up Expo
-        uses: expo/expo-github-action@v5
+        uses: expo/expo-github-action@master
         with:
           expo-cache: true
-          expo-version: 4.x
+          expo-version: 2.x
           expo-token: ${{ secrets.EXPO_TOKEN }}
       - name: Install dependencies
         run: yarn install
