--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -4,7 +4,7 @@ on: [pull_request]
 jobs:
   preview:
     name: Publish preview
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     if: github.event.pull_request.head.repo.full_name == 'bycedric/office-marathon'
     steps:
       - name: Set up repository
