--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "dripsy": "^1.4.6",
     "expo": "^40.0.0",
     "expo-app-loading": "^1.0.1",
+    "expo-cli": "^4.3.1",
     "expo-constants": "~9.3.3",
     "expo-location": "~10.0.0",
     "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "expo-task-manager": "~8.6.0",
     "geodist": "^0.2.1",
+    "global": "^4.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
