--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@aws-amplify/cli": "^4.50.2",
     "@expo-google-fonts/open-sans": "^0.1.0",
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "^6.0.0",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "aws-amplify": "^3.4.0",
+    "aws-amplify-react-native": "^4.3.3",
     "dripsy": "^1.4.6",
     "expo": "^40.0.0",
     "expo-app-loading": "^1.0.1",
-    "expo-cli": "^4.3.2",
+    "expo-cli": "^4.4.4",
     "expo-constants": "~9.3.3",
     "expo-location": "~10.0.0",
     "expo-permissions": "~10.0.0",
@@ -30,7 +34,7 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.0",
+    "react-native-screens": "~2.15.2",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
