--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,17 +76,17 @@ jobs:
 
       - name: 📱 Build app
         if: ${{ github.event.inputs.submit != 'true' }}
-        run: >
-          eas build
-            --non-interactive
-            --platform=${{ github.event.inputs.platform }}
+        run: |
+          eas build \
+            --non-interactive \
+            --platform=${{ github.event.inputs.platform }} \
             --profile=${{ github.event.inputs.profile }}
 
       - name: 🚀 Build and submit app
         if: ${{ github.event.inputs.submit == 'true' }}
-        run: >
-          eas build
-            --non-interactive
-            --auto-submit
-            --platform=${{ github.event.inputs.platform }}
+        run: |
+          eas build \
+            --non-interactive \
+            --auto-submit \
+            --platform=${{ github.event.inputs.platform }} \
             --profile=${{ github.event.inputs.profile }}
