--- a/package.json
+++ b/package.json
@@ -8,17 +8,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo-google-fonts/open-sans": "^0.1.0",
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/native": "^5.8.10",
-    "@react-navigation/stack": "^5.12.8",
-    "dripsy": "^1.4.6",
-    "expo": "^45.0.0",
+    "@expo-google-fonts/open-sans": "^0.2.2",
+    "@react-native-async-storage/async-storage": "~1.17.6",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "dripsy": "^3.6.0",
+    "expo": "^45.0.5",
     "expo-app-loading": "~2.0.0",
     "expo-constants": "~13.1.1",
     "expo-location": "~14.2.2",
-    "expo-permissions": "~13.2.0",
     "expo-status-bar": "~1.3.0",
     "expo-task-manager": "~10.2.1",
     "expo-updates": "~0.13.2",
@@ -37,7 +35,7 @@
     "@types/react": "~17.0.21",
     "@types/react-dom": "~17.0.11",
     "@types/react-native": "~0.67.6",
-    "typescript": "~4.3.5"
+    "typescript": "^4.7.3"
   },
   "private": true
 }
