--- a/package.json
+++ b/package.json
@@ -9,31 +9,31 @@
   },
   "dependencies": {
     "@expo-google-fonts/open-sans": "^0.2.2",
-    "@react-native-async-storage/async-storage": "~1.17.6",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "dripsy": "^3.6.0",
-    "expo": "^45.0.5",
+    "expo": "^48.0.7",
     "expo-app-loading": "~2.0.0",
-    "expo-constants": "~13.1.1",
-    "expo-location": "~14.2.2",
-    "expo-status-bar": "~1.3.0",
-    "expo-task-manager": "~10.2.1",
-    "expo-updates": "~0.13.2",
+    "expo-constants": "~14.2.1",
+    "expo-location": "~15.1.1",
+    "expo-status-bar": "~1.4.4",
+    "expo-task-manager": "~11.1.1",
+    "expo-updates": "~0.16.3",
     "geodist": "^0.2.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-gesture-handler": "~2.2.1",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-dom": "~17.0.11",
+    "@types/react": "~18.0.27",
+    "@types/react-dom": "~18.0.10",
     "@types/react-native": "~0.67.6",
     "typescript": "^4.7.3"
   },
