--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "private": true,
+  "name": "@bycedric/office-marathon",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -8,15 +10,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo-google-fonts/open-sans": "^0.2.2",
+    "@expo-google-fonts/open-sans": "^0.2.3",
     "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/stack": "^6.2.1",
-    "dripsy": "^3.6.0",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "dripsy": "^3.10.0",
     "expo": "^48.0.7",
-    "expo-app-loading": "~2.0.0",
     "expo-constants": "~14.2.1",
     "expo-location": "~15.1.1",
+    "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "expo-task-manager": "~11.1.1",
     "expo-updates": "~0.16.3",
@@ -28,14 +30,12 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.21.3",
     "@types/react": "~18.0.27",
     "@types/react-dom": "~18.0.10",
-    "@types/react-native": "~0.67.6",
-    "typescript": "^4.7.3"
-  },
-  "private": true
+    "typescript": "^4.9.5"
+  }
 }
