--- a/app.json
+++ b/app.json
@@ -33,6 +33,12 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "584c5703-eecf-4f21-ab38-84a86f74e8f2"
+      }
+    },
+    "owner": "bycedric"
   }
 }
