chore: configure for staging

--- a/app.json
+++ b/app.json
@@ -17,6 +17,7 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier": "com.bycedric.officemarathon",
       "supportsTablet": true
     },
     "android": {
@@ -33,6 +34,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "3070fd4b-f78c-4af8-84be-7c3da1948c88"
+      }
     }
   }
 }
