fix: add staging flag when installing eas-cli

--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -27,6 +27,8 @@ jobs:
         with:
           eas-version: latest
           token: ${{ secrets.EXPO_TOKEN_STAGING }}
+        env:
+          EXPO_STAGING: true
 
       - name: 📦 Install dependencies
         run: yarn install
