--- a/.github/workflows/review.yml
+++ b/.github/workflows/review.yml
@@ -35,6 +35,8 @@ jobs:
 
       - name: 👷 Configure project
         run: eas init --id 3070fd4b-f78c-4af8-84be-7c3da1948c88
+        env:
+          EXPO_STAGING: true
 
       - name: 🚀 Publish preview
         uses: expo/expo-github-action/preview@v8
