chore: add missing owners field for robot token

--- a/app.json
+++ b/app.json
@@ -35,6 +35,7 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
+    "owner": "bycedrictest",
     "extra": {
       "eas": {
         "projectId": "3070fd4b-f78c-4af8-84be-7c3da1948c88"
