--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,7 @@
 {
   "cli": {
-    "version": ">=6.0.0"
+    "version": ">=6.0.0",
+    "appVersionSource": "remote"
   },
   "build": {
     "development": {
@@ -12,7 +13,9 @@
         "buildType": "apk"
       }
     },
-    "production": {}
+    "production": {
+      "autoIncrement": true
+    }
   },
   "submit": {
     "production": {}
